--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ pyasn1-modules==0.2.8
 pyparsing==3.0.6
 python-crontab==2.6.0
 python-dateutil==2.8.2
+python-dotenv==0.19.2
 pytz==2021.3
 redis==4.0.2
 requests==2.26.0
